fix horizontal scroll but lag bug

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -8,8 +8,8 @@ html
 
 #book
   position relative
-  width 300vw
   height 100%
+  max-width 100vw 
 
 #page_2
   background-color #FFF
